--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.3</version>
+        </dependency>
 
 
 
